--- a/src/client/styles/NavBar.module.css
+++ b/src/client/styles/NavBar.module.css
@@ -1,13 +1,31 @@
 .list {
+  width: 100%;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  padding: 10px 20px 20px 20px;
+  justify-content: space-evenly;
+  margin: 0;
+  padding: 15px;
   border-bottom: 1px dotted grey;
+  background-color: white;
+  position: fixed;
+  top: 0;
+  z-index: 100;
 }
 
 .item {
   display: inline-block;
   margin-right: 10px;
   text-decoration: none;
+}
+
+.logout {
+  border: none;
+  cursor: pointer;
+  border-radius: 5%;
+  padding: 5px 10px;
+  color: var(--primary-color);
+}
+
+.logout:hover {
+  background-color: #e595d1;
+  color: white;
 }
