--- a/src/client/styles/LoginForm.module.css
+++ b/src/client/styles/LoginForm.module.css
@@ -31,7 +31,7 @@
   width: 50%;
   border-radius: var(--border-radius);
   color: white;
-  background-color: #ec53c6;
+  background-color: var(--brand-color);
   border: none;
   padding: 10px 15px;
   margin-bottom: 15px;
