--- a/src/client/styles/App.css
+++ b/src/client/styles/App.css
@@ -13,6 +13,19 @@ body {
   height: 100%;
 }
 
+input,
+textarea {
+  font-family: inherit;
+  border-color: var(--primary-color);
+  border-radius: var(--border-radius);
+  padding: 8px;
+}
+
+input:focus,
+textarea:focus {
+  outline-color: var(--brand-color);
+}
+
 a,
 p,
 h1,
