--- a/src/client/styles/NavBar.module.css
+++ b/src/client/styles/NavBar.module.css
@@ -20,7 +20,7 @@
 .logout {
   border: none;
   cursor: pointer;
-  border-radius: 5%;
+  border-radius: var(--border-radius);
   padding: 5px 10px;
   color: var(--primary-color);
 }
