--- a/src/client/styles/Artists.module.css
+++ b/src/client/styles/Artists.module.css
@@ -8,3 +8,35 @@
   margin: 10px 0;
   font-style: italic;
 }
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.button {
+  border: none;
+  cursor: pointer;
+  border-radius: var(--border-radius);
+  padding: 5px 10px;
+}
+
+.subscribe {
+  background-color: var(--brand-color);
+  color: white;
+}
+
+.subscribe:hover {
+  background-color: #e595d1;
+  color: white;
+}
+
+.unsubscribe {
+  color: var(--primary-color);
+}
+
+.unsubscribe:hover {
+  background-color: var(--brand-color);
+  color: white;
+}
