--- a/src/client/styles/Card.module.css
+++ b/src/client/styles/Card.module.css
@@ -10,9 +10,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: auto;
   border-radius: var(--border-radius);
-  height: fit-content;
+  width: 20%;
+  margin: 10px;
 }
 
 .contentContainer:hover {
@@ -20,6 +20,7 @@
 }
 
 .content {
+  padding: 10px;
   inline-size: 100%;
   overflow-wrap: break-word;
 }
