Can send and delete fan letter

--- a/src/client/styles/FanLetter.module.css
+++ b/src/client/styles/FanLetter.module.css
@@ -3,9 +3,10 @@
   margin: 0 auto;
 }
 
-.createdAt {
+.topContent {
+  display: flex;
+  justify-content: space-between;
   margin-bottom: 20px;
-  justify-self: flex-end;
 }
 
 .letterTitle {
