--- a/src/client/styles/Index.module.css
+++ b/src/client/styles/Index.module.css
@@ -1,4 +1,11 @@
+.rootContainer {
+  padding: 0 5%;
+}
+
 .sectionTitle {
-  text-align: center;
+  margin-bottom: 15px;
+}
+
+.sectionContainer {
   margin-bottom: 10px;
 }
