--- a/src/client/styles/MessageComments.module.css
+++ b/src/client/styles/MessageComments.module.css
@@ -12,3 +12,11 @@
   font-size: 10px;
   text-align: center;
 }
+
+.exports {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 20px;
+  font-size: 12px;
+}
