--- a/src/client/styles/MessageDetail.module.css
+++ b/src/client/styles/MessageDetail.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 25%;
+  width: 30%;
   margin: 0 auto;
 }
 
@@ -29,8 +29,8 @@
 }
 
 .commentButton {
-  align-self: flex-end;
-  margin-bottom: 10px;
+  align-self: center;
+  margin-bottom: 20px;
 }
 
 .videoDisclaimer {
