--- a/src/client/styles/MessageComments.module.css
+++ b/src/client/styles/MessageComments.module.css
@@ -5,6 +5,7 @@
   margin: 0 auto;
   width: 35%;
   background-color: rgba(200, 200, 200, 0.3);
+  border-radius: var(--border-radius);
 }
 
 .disclaimer {
