--- a/src/client/styles/CommentBubble.module.css
+++ b/src/client/styles/CommentBubble.module.css
@@ -1,12 +1,17 @@
-.commentContainer {
+.container {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
-  align-items: flex-end;
-  border-radius: 10px;
-  padding: 10px 15px;
   margin: 15px;
+}
+
+.commentContainer {
   max-width: 55%;
+  display: flex;
+  flex-direction: column;
+  border-radius: var(--border-radius);
+  align-items: flex-end;
+  padding: 10px 15px;
+  flex-wrap: wrap;
   overflow-wrap: anywhere;
 }
 
@@ -29,4 +34,12 @@
   align-self: flex-end;
   background-color: var(--brand-color);
   color: white;
+}
+
+.deleteComment {
+  color: rgb(150, 150, 150);
+  font-size: 10px;
+  align-self: flex-end;
+  margin-top: 3px;
+  text-decoration: none;
 }
