Line breaks in fan letter & update disclaimer

--- a/src/client/styles/MessageDetail.module.css
+++ b/src/client/styles/MessageDetail.module.css
@@ -29,10 +29,6 @@
   margin-bottom: 20px;
 }
 
-.videoDisclaimer {
-  font-style: italic;
-}
-
-.pictureDisclaimer {
+.disclaimer {
   margin-top: 50px;
 }
