--- a/src/client/styles/Form.module.css
+++ b/src/client/styles/Form.module.css
@@ -54,3 +54,9 @@
   font-size: 10px;
   text-align: center;
 }
+
+.notEnoughPoints {
+  text-align: center;
+  margin: 10px 0;
+  font-size: 12px;
+}
